--- a/assets/scss/tufte/_layout.scss
+++ b/assets/scss/tufte/_layout.scss
@@ -1,4 +1,5 @@
 .container {
+  background: var(--bg);
   margin: 0 auto;
   max-width: 800px;
   width: 80%;
